Updated with optimized images and updated project details

--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -34,7 +34,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Amazon.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Amazon.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927771/ugxxgjxcptiqeqm81c0i.png" style="height: 100%; width: 100%;" alt="">
