--- a/Flipkart_portfolio.html
+++ b/Flipkart_portfolio.html
@@ -34,7 +34,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Flipkart.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Flipkart.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738927786/l5rkt5sf7rdfkbowly9o.png" style="height: 100%; width: 100%;" alt="">
