--- a/Instagram_portfolio.html
+++ b/Instagram_portfolio.html
@@ -34,10 +34,10 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Instagram.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Instagram.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Instagram2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Instagram2.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
