--- a/Olx.html
+++ b/Olx.html
@@ -36,7 +36,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Olx1.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx1.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930943/euiix6wusv2ouerscdkh.png" style="height: 100%; width: 100%;" alt="">
