--- a/craveroute.html
+++ b/craveroute.html
@@ -36,7 +36,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Craveroute1.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute1.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930649/ved4s3abbpa76xz8cadv.png" style="height: 100%; width: 100%;" alt="">
