--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
   
               <h5 class="text-light mt-3">Currently Pursuing</h5>
               <ul class="list-inline">
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">NestJS</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Microservices</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm d-none">NestJS</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm d-none">Microservices</li>
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Clean Architecture</li>
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Socket.io</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">WebRTC</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm d-none">WebRTC</li>
               </ul>
           </div>
       </div>
@@ -272,11 +272,11 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-mern">MERN</li>
             <li data-filter=".filter-react">React</li>
+            <li data-filter=".filter-ts">Typescript</li>
             <li data-filter=".filter-ejs">Node & Ejs</li>
             <li data-filter=".filter-dev">In Development</li>
             <li data-filter=".filter-designs">Designs</li>
             <li data-filter=".filter-figma">Figma</li>
-            <li data-filter=".filter-cp">Code Planner</li>
             <li data-filter=".filter-frontend">Frontend</li>
             <li data-filter=".filter-backend">Backend</li>
             <li data-filter=".filter-static">Static</li>
@@ -284,22 +284,22 @@
         </div>
       </div>
       <div class="row portfolio-container">
-        <div class="col-lg-4 col-md-6 portfolio-item filter-cp filter-designs filter-dev">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-dev filter-mern filter-ts">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/codePlannerSlotflow.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Slotflow1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>SLOTFLOW CODE PLANNER</h4>
-              <p>Database design</p>
+              <h4>SLOTFLOW</h4>
+              <p>Appointment Booking Web App</p>
               <div class="portfolio-links">
-                <a href="codePlannerSlotflow.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                <a href="slotflow.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-figma filter-designs filter-dev">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-figma filter-designs">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/FigmaSlotflow.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/FigmaSlotflow.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>SLOTFLOW FIGMA DESIGN</h4>
               <p>Figma Design</p>
@@ -310,9 +310,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend filter-dev">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/NetflixRcgpt.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/NetflixRcgpt.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>NETFLIX CLONE</h4>
               <p>Clone</p>
@@ -323,9 +323,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend filter-dev">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Youtuberc.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Youtuberc.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>YOUTUBE CLONE</h4>
               <p>Clone</p>
@@ -338,7 +338,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-mern filter-react filter-backend filter-backend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Olx1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Olx1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>OLC-CRUD-CLONE</h4>
               <p>Clone</p>
@@ -351,7 +351,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-mern filter-react filter-backend filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Craveroute1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Craveroute1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>CRAVEROUTE</h4>
               <p>Food order app</p>
@@ -364,10 +364,10 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-mern filter-react filter-backend filter-frontend filter-dev">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Talkzy.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Talkzy1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>TALKZY</h4>
-              <p>Real time chat web app</p>
+              <p>Social media web app</p>
               <div class="portfolio-links">
                 <a href="talkzy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -390,7 +390,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-static filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Porsche1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Porsche1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>PORSCHE</h4>
               <p>Fanpage</p>
@@ -403,7 +403,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-ejs filter-backend filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Valorant.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Valorant.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>VALORANT</h4>
               <p>Fanpage</p>
@@ -416,7 +416,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-figma filter-designs">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/FigmaLapshop.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/FigmaLapshop.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>LAPSHOP FIGMA DESIGN</h4>
               <p>Figma design</p>
@@ -442,7 +442,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-frontend filter-static">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Flipkart.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Flipkart.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>FLIPCART</h4>
               <p>Homepage</p>
@@ -455,7 +455,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-static filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Kalari.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Kalari.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>KALARI</h4>
               <p>Web page</p>
@@ -468,7 +468,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-static filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Amazon.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Amazon.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>AMAZON</h4>
               <p>Homepage</p>
@@ -481,7 +481,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-static filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Instagram.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Instagram.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>INSTAGRAM</h4>
               <p>Homepage</p>
@@ -495,7 +495,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-static filter-frontend">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Netflix.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Netflix.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>NETFLIX</h4>
               <p>Homepage</p>
@@ -600,7 +600,6 @@
 
   <script src="assets/js/main.js"></script>
   <script src="assets/js/form.js"></script>
-  <script src="assets/js/api.js"></script>
 </body>
 
 </html>
