--- a/netflixReact.html
+++ b/netflixReact.html
@@ -36,7 +36,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/NetflixRcgpt.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/NetflixRcgpt.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738930134/gukjniq8lix1efircma9.png" style="height: 100%; width: 100%;" alt="">
