--- a/talkzy.html
+++ b/talkzy.html
@@ -36,10 +36,10 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Talkzy.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Talkzy1.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Talkzy1.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Talkzy2.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -56,17 +56,21 @@
               </li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
-                I am developing a real-time chat application from scratch using React, Vite, Tailwind CSS, Zustand for state management, Cloudinary for image storage, and Express.js for the backend. Axios is used for API calls. The project is currently in the development phase, and I am actively exploring new technologies to enhance its implementation. 🚀
+              I am developing a real-time chat with social media from scratch using React, Vite, Tailwind CSS, Zustand 
+              for state management, Cloudinary for image storage, and Express.js for the backend. Axios is used for API calls.
+               The real-time chat functionality has been successfully implemented, enabling seamless instant messaging. 
+               Other features, such as post uploading and additional social media interactions, are currently in development. 
+               The project is still evolving, and I am actively exploring new technologies to enhance its implementation. 🚀
             </p>
             <div id="projectDetails" class="mt-3">
               <h6 class="mt-4">Tech Stack 💻</h6>
               <ul>
-                <li><strong>Frontend:</strong> React, Tailwind Css </li>
+                <li><strong>Frontend:</strong> React, Tailwind Css, DaisyUI </li>
                 <li><strong>Global state management library</strong> Zustand</li>
                 <li><strong>Authentication:</strong> Firebase</li>
                 <li><strong>Notofication:</strong> React hot toast</li>
-                <li><strong>Protocol</strong> WebSocket [pending]</li>
-                <li><strong>Library</strong> Socket.io [pending]</li>
+                <li><strong>Protocol</strong> WebSocket</li>
+                <li><strong>Library</strong> Socket.io</li>
               </ul>
             </div>
           </div>
