--- a/youtuberc.html
+++ b/youtuberc.html
@@ -35,26 +35,31 @@
             <h2 class="portfolio-title">Youtube clone using youtube API</h2>
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide" style="height: auto">   
-                  <img src="assets/img/portfolio/Youtuberc.png" style="height: 100%; width: 100%;" alt="">
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Youtuberc.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Youtuberc2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Youtuberc2.jpg" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929329/civjf4h9orpfaqxztxax.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929329/civjf4h9orpfaqxztxax.png"
+                    style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929340/hvx6ekw2bqviss6rzymu.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929340/hvx6ekw2bqviss6rzymu.png"
+                    style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929378/rt0zoatt1b0swxqgvwc3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929378/rt0zoatt1b0swxqgvwc3.png"
+                    style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929385/dgw8hzdul1iylurgmzqf.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929385/dgw8hzdul1iylurgmzqf.png"
+                    style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929379/mi818oikngmghkjmitwt.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="https://res.cloudinary.com/dic28chps/image/upload/v1738929379/mi818oikngmghkjmitwt.png"
+                    style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -65,13 +70,25 @@
             <ul>
               <li><strong>Category</strong>: React with Firebase and Youtube API</li>
               <li><strong>Project date</strong>: 5 November, 2024</li>
-              <li><strong class="text-warning">On Progress</strong>: This project is currently under development for optimization, but you can still explore the github repo.</li>
+              <li><strong class="text-warning">On Progress</strong>: This project is currently under development for
+                optimization, but you can still explore the github repo.</li>
               <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/yt-clone"
                   target="_blank">https://github.com/midhunkalarikkal/yt-clone</a>
               </li>
+              <li><strong>Live URL</strong>: <a href="https://clone-c9b9a.web.app/"
+                  target="_blank">https://clone-c9b9a.web.app/</a>
+              </li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
-                I have created a React-based YouTube web clone using YouTube APIs, and it is one of my favorite projects. I dedicated a significant amount of time to developing this legacy project, ensuring it is fully responsive across all devices. The project includes numerous features such as YouTube-style tiles, YouTube Video API, YouTube Search API with debouncing, Comment API, and a dynamically designed video page that displays full details along with comments. Additionally, I have implemented light and dark theme toggling, custom hooks, and a Redux store—incorporating a comprehensive set of React concepts. The project is currently in the optimization and hosting phase.
+              I have created a React-based YouTube web clone using YouTube APIs, and it is one of my favorite projects. 
+              I dedicated a significant amount of time to developing this legacy project, ensuring it is fully responsive 
+              across all devices. The project includes numerous features such as YouTube-style tiles, YouTube Video API, 
+              YouTube Search API with debouncing, and a dynamically designed video page that displays full details along 
+              with comments. I have also implemented a mocked real-time live chat to simulate YouTube’s live chat experience, 
+              real-time search suggestions for instant recommendations, and a single-level nested comment system for 
+              structured discussions. Additionally, the project includes light and dark theme toggling, custom hooks, 
+              and a Redux store for efficient state management. Currently, it is in the optimization and hosting phase 
+              to ensure seamless performance and scalability.
             </p>
             <div id="projectDetails" class="mt-3">
               <h6 class="mt-4">Tech Stack 💻</h6>
