--- a/netflixReact.html
+++ b/netflixReact.html
@@ -76,14 +76,22 @@
                   target="_blank">https://netflix-rcgpt.web.app</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
-                I developed a Netflix Clone using React, Tailwind CSS, and Redux, integrating Firebase for authentication and hosting. This project leverages the TMDB API to fetch movie data and employs custom hooks to efficiently handle different category-based requests. To enhance user experience, I implemented shimmer effects, ensuring smooth content loading, and various custom features for seamless navigation.
-
-                Authentication is secured with Firebase, allowing users to register, log in, and reset passwords via email verification. The platform is fully responsive, delivering an optimized viewing experience across all devices. This project has significantly strengthened my understanding of React concepts, and I continuously upgrade it with new features to enhance functionality and user engagement.
+              I developed a Netflix Clone using React, Tailwind CSS, and Redux, integrating Firebase for authentication and 
+              hosting. This project leverages the TMDB API to fetch movie data and employs custom hooks to efficiently handle 
+              different category-based requests. To enhance user experience, I implemented shimmer effects for smooth content 
+              loading and various custom features for seamless navigation. Authentication is secured with Firebase, allowing 
+              users to register, log in, and reset passwords via email verification. The platform is fully responsive, 
+              delivering an optimized viewing experience across all devices. Additionally, 
+              I integrated a Gemini 1.5 Flash-powered movie recommendation system with rate limiting, 
+              ensuring personalized suggestions while maintaining system performance.
+              This project has significantly strengthened my understanding of React concepts, 
+              and I continuously upgrade it with new features to enhance functionality and user engagement. 🚀
             </p>
             <div id="projectDetails" class="mt-3">
               <h6 class="mt-4">Tech Stack 💻</h6>
               <ul>
                 <li><strong>Frontend:</strong> React, Tailwind Css </li>
+                <li><strong>AI Agent</strong> Gemini 1.5 flash</li>
                 <li><strong>Global state management library</strong> Redux</li>
                 <li><strong>Authentication:</strong> Firebase</li>
                 <li><strong>Notofication:</strong> React tostify</li>
